Внесение изменение по результатам анализа кода с использованием SonarQube