@@ -13,18 +13,16 @@ import java.util.Collections;
 import java.util.List;
 
 /**
- * @ClassName SimpleCsvConverterTest
- * @Author Alexei Shvariov
- * @Date 28.06.2025
- * @Version 1.0
+ * @author Alexei Shvariov
+ * @version 1.0
  */
-public class SimpleCsvConverterTest {
+ class SimpleCsvConverterTest {
     private final PersonGenerator personGenerator = new PersonGenerator(new Faker());
     private final StudentsGenerator studentsGenerator = new StudentsGenerator(new Faker());
 
     @Test
     @DisplayName("Test toCsvFileData when data contains valid objects then conversion success")
-    public void testToCsvFileData_whenDataContainsValidObjects_thenConversionSuccess() {
+     void testToCsvFileData_whenDataContainsValidObjects_thenConversionSuccess() {
         int columnHeadersRowNumber = 1;
         SimpleCsvConverter simpleCsvConverter = new SimpleCsvConverter();
         List<Person> persons = personGenerator.getPersonsList(5);
@@ -38,7 +36,7 @@ public class SimpleCsvConverterTest {
 
     @Test
     @DisplayName("Test toCsvFileData when data is null then throw IllegalArgumentException")
-    public void testToCsvFileData_whenDataIsNull_thenThrowIllegalArgumentException() {
+     void testToCsvFileData_whenDataIsNull_thenThrowIllegalArgumentException() {
         SimpleCsvConverter simpleCsvConverter = new SimpleCsvConverter();
         Assertions.assertThrows(IllegalArgumentException.class,
                 () -> simpleCsvConverter.toCsvFileData(null));
@@ -46,25 +44,29 @@ public class SimpleCsvConverterTest {
 
     @Test
     @DisplayName("Test toCsvFileData when data is empty then throw IllegalArgumentException")
-    public void testToCsvFileData_whenDataIsEmpty_thenThrowIllegalArgumentException() {
+     void testToCsvFileData_whenDataIsEmpty_thenThrowIllegalArgumentException() {
         SimpleCsvConverter simpleCsvConverter = new SimpleCsvConverter();
+
+        List<Object> students = Collections.emptyList();
         Assertions.assertThrows(IllegalArgumentException.class,
-                () -> simpleCsvConverter.toCsvFileData(Collections.emptyList()));
+                () -> simpleCsvConverter.toCsvFileData(students));
     }
 
     @Test
     @DisplayName("Test toCsvFileData when data contains objects of different classes throw IllegalArgumentException")
-    public void testToCsvFileData_whenDataContainsObjectsOfDifferentClasses_thenThrowIllegalArgumentException() {
+     void testToCsvFileData_whenDataContainsObjectsOfDifferentClasses_thenThrowIllegalArgumentException() {
         final Person person = personGenerator.getPerson();
         final Student student = studentsGenerator.getStudent();
         final SimpleCsvConverter simpleCsvConverter = new SimpleCsvConverter();
+
+       List<Object> students = List.of(person, student);
         Assertions.assertThrows(IllegalArgumentException.class,
-                () -> simpleCsvConverter.toCsvFileData(List.of(person, student)));
+                () -> simpleCsvConverter.toCsvFileData(students));
     }
 
     @Test
     @DisplayName("Test toCsvFileData when data contains strings then throw IllegalArgumentException")
-    public void testToCsvFileData_whenDataContainsStrings_thenConversionSuccess() {
+     void testToCsvFileData_whenDataContainsStrings_thenConversionSuccess() {
         final SimpleCsvConverter simpleCsvConverter = new SimpleCsvConverter();
         final List<String> strings = List.of("String1", "String2", "String3");
 
@@ -77,7 +79,7 @@ public class SimpleCsvConverterTest {
 
     @Test
     @DisplayName("Test toCsvFileData when data contains primitives then throw IllegalArgumentException")
-    public void testToCsvFileData_whenDataContainsPrimitives_thenConversionSuccess() {
+     void testToCsvFileData_whenDataContainsPrimitives_thenConversionSuccess() {
         SimpleCsvConverter simpleCsvConverter = new SimpleCsvConverter();
         List<Double> numbers = List.of(10.2, 11.2, 12.3);
 
@@ -91,7 +93,7 @@ public class SimpleCsvConverterTest {
     @Test
     @DisplayName("Test toCsvFileData when collection field convert to single cell" +
             " then collection convert valid and added column headers")
-    public void testToCsvFileData_whenCollectionFieldConvertToSingleCell_thenCollectionConvertValid() {
+     void testToCsvFileData_whenCollectionFieldConvertToSingleCell_thenCollectionConvertValid() {
         final int columnHeadersRowNumber = 1;
         final SimpleCsvConverter simpleCsvConverter = new SimpleCsvConverter();
         simpleCsvConverter.setConvertCollectionAsMultipleCell(false);
@@ -103,14 +105,14 @@ public class SimpleCsvConverterTest {
         Assertions.assertFalse(result.isEmpty());
         final String[] resultRows = result.split(System.lineSeparator());
         Assertions.assertEquals(students.size() + columnHeadersRowNumber, resultRows.length);
-        final String scoreFieldValue = students.get(0).getScore().toString()
+        final String scoreFieldValue = students.getFirst().getScore().toString()
                 .replaceAll(simpleCsvConverter.getCellSeparator(), " |");
         Assertions.assertTrue(result.contains(scoreFieldValue));
     }
 
     @Test
     @DisplayName("Test toCsvFileData when collection field convert to multiple cell then collection convert valid")
-    public void testToCsvFileData_whenCollectionFieldConvertToMultipleCells_thenCollectionConvertValid() {
+     void testToCsvFileData_whenCollectionFieldConvertToMultipleCells_thenCollectionConvertValid() {
         final List<String> score = List.of("32", "99");
         final List<Student> students = List.of(new Student("Petya Ivanov", score));
         int nameColumnNumber = 1;
@@ -130,7 +132,7 @@ public class SimpleCsvConverterTest {
     @Test
     @DisplayName("Test toCsvFileData when field marked CsvExclude annotation " +
             "then result and column headers do not contains excluded field")
-    public void testToCsvFileData_whenFieldMarkedCsvExcludeAnnotation_thenResultsAndColumnHeadersNotContainsFieldValue() {
+     void testToCsvFileData_whenFieldMarkedCsvExcludeAnnotation_thenResultsAndColumnHeadersNotContainsFieldValue() {
         final String excludeFieldName = "passport";
         final SimpleCsvConverter simpleCsvConverter = new SimpleCsvConverter();
         simpleCsvConverter.setConvertCollectionAsMultipleCell(false);
